feat: add response roleName to fetch user endpoint
