# internal/handler/user_dto.go
@@ -38,6 +38,14 @@ type UserResponse struct {
 	CreatedAt time.Time `json:"createdAt"`
 }
 
+type UserEnrichedResponse struct {
+	ID        int64     `json:"id"`
+	Username  string    `json:"username"`
+	RoleID    int64     `json:"roleID"`
+	CreatedAt time.Time `json:"createdAt"`
+	RoleName  string    `json:"roleName"`
+}
+
 func UserDomainToResponse(user *domain.User) UserResponse {
 	return UserResponse{
 		ID:        user.ID,
@@ -47,10 +55,30 @@ func UserDomainToResponse(user *domain.User) UserResponse {
 	}
 }
 
+func UserEnrichedDomainToResponse(user *domain.UserEnriched) UserEnrichedResponse {
+	return UserEnrichedResponse{
+		ID:        user.ID,
+		Username:  user.Username,
+		RoleID:    user.RoleID,
+		CreatedAt: user.CreatedAt,
+		RoleName:  user.RoleName,
+	}
+}
+
 func UserListToResponse(users []domain.User) []UserResponse {
 	results := make([]UserResponse, 0, len(users))
 	for _, user := range users {
 		u := UserDomainToResponse(&user)
+		results = append(results, u)
+	}
+
+	return results
+}
+
+func UserEnrichedListToResponse(users []domain.UserEnriched) []UserEnrichedResponse {
+	results := make([]UserEnrichedResponse, 0, len(users))
+	for _, user := range users {
+		u := UserEnrichedDomainToResponse(&user)
 		results = append(results, u)
 	}
 
